--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "concourse-ci guide",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:ci": "cypress run --headless",
+    "cy": "cypress open",
+    "cy:ci:visual": "cypress run --headless --spec 'cypress/integration/3-visual-testing/visual-test.spec.js'",
+    "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
+    "pretest": "npm run clean:reports",
+    "scripts": "cypress run",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report",
+    "cy:ci:report" : "npm run scripts || npm run posttest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +30,13 @@
   "homepage": "https://github.com/richardforjoe/concourse-cypress#readme",
   "dependencies": {
     "cypress": "^9.2.0"
+  },
+  "devDependencies": {
+    "@applitools/eyes-cypress": "^3.23.4",
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha": "^9.1.3",
+    "mochawesome": "^7.0.1",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.0.1"
   }
 }
