--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
     "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
     "posttest": "npm run combine-reports && npm run generate-report",
-    "cy:ci:report" : "npm run scripts || npm run posttest"
+    "cy:ci:report": "npm run scripts || npm run posttest"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/richardforjoe/concourse-cypress#readme",
   "dependencies": {
-    "cypress": "^8.3.0"
+    "cypress": "8.3.0"
   },
   "devDependencies": {
     "@applitools/eyes-cypress": "^3.23.4",
