--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "cy:ci": "cypress run --headless --spec 'cypress/integration/functional/**/*'",
     "cy": "cypress open",
     "cy:ci:visual": "cypress run --headless --spec 'cypress/integration/visual/**/*'",
-    "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
-    "pretest": "npm run clean:reports",
+    "reports:clean": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
+    "report:pretest": "npm run clean:reports",
     "scripts": "cypress run",
-    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
-    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
-    "posttest": "npm run combine-reports && npm run generate-report",
-    "cy:ci:report": "npm run scripts || npm run posttest"
+    "reports:combine": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "report:generate": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "report:generate:md": "npx mochawesome-json-to-md -p cypress/reports/mochareports/report.json -o cypress/reports/mochareports/report.md",
+    "report:posttest": "npm run reports:combine && npm run report:generate && yarn run report:generate:md",
+    "cy:ci:report": "npm run report:pretest && npm run cy:ci || npm run posttest"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "cypress-multi-reporters": "^1.5.0",
     "mocha": "^9.1.3",
     "mochawesome": "^7.0.1",
+    "mochawesome-json-to-md": "^0.2.1",
     "mochawesome-merge": "^4.2.1",
     "mochawesome-report-generator": "^6.0.1"
   }
